--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 					<span class="date">2016</span>
 					<h2>Higher Secondary School</h2>
 					<span class="position">St Marys High School & Junior College</span>
-					<p class="mt-4">Grade: First Class Distinct.</p>
+					<p class="mt-4">Grade: First Class .</p>
 				</div>
 			</div>
 		</div>
