--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 						<div class="block-18 fancy-bond" style="background-image: none;">
 							<div class="text">
 								<!-- Replace "URL_TO_YOUR_IMAGE" with the actual URL of your Ranger badge image -->
-								<img src="images\ranger.png" alt="Ranger Icon">
+								<img src="C:\Users\kamaa\Downloads\Portfolio-Website-Template-main\Amaankhan857.github.io\images\ranger.png" alt="Ranger Icon">
 								<span>Ranger</span>
 							</div>
 						</div>
@@ -471,7 +471,7 @@
 						<div class="block-18 fancy-bond" style="background-image: none;">
 							<div class="text">
 								<!-- Replace "URL_TO_CERTIFIED_ADMIN_IMAGE" with the actual URL of the Certified Admin badge image -->
-								<img src="images\ADM.png" alt="Certified Admin Badge">
+								<img src="images/ADM.png" alt="Certified Admin Badge">
 								<span>Certified Admin</span>
 							</div>
 						</div>
@@ -482,7 +482,7 @@
 						<div class="block-18 fancy-bond" style="background-image: none;">
 							<div class="text">
 								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
-								<img src="images\Pd1.png" alt="PD1 Badge">
+								<img src="images/Pd1.png" alt="PD1 Badge">
 								<span>PD1</span>
 							</div>
 						</div>
