--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 						<div class="block-18 fancy-bond" style="background-image: none;">
 							<div class="text">
 								<!-- Replace "URL_TO_YOUR_IMAGE" with the actual URL of your Ranger badge image -->
-								<img src="images/ranger.png" alt="Ranger Icon">
+								<img src="images/sas-stickers-double-star-ranger_2.jpg">
 								<span>Ranger</span>
 							</div>
 						</div>
