--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 							<div class="text">
 								<!-- Replace "URL_TO_YOUR_IMAGE" with the actual URL of your Ranger badge image -->
 								<img src="images/sas-stickers-double-star-ranger_2-removebg-preview.png">
-								<span>Ranger</span>
+								<span>Double Star Ranger</span>
 							</div>
 						</div>
 					</div>
