--- a/index.html
+++ b/index.html
@@ -485,6 +485,24 @@
 								<img src="images/Pd1.png" alt="PD1 Badge">
 								<span>PD1</span>
 							</div>
+
+					<!-- Certified AI Assocaite -->
+					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+						<div class="block-18 fancy-bond" style="background-image: none;">
+							<div class="text">
+								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
+								<img src="images/1_m-uw7vVWdxUN5bVeH_nqvw.png">
+								<span>PD1</span>
+							</div>
+							
+					<!-- Certified AI Specalist -->
+					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+						<div class="images/1_dCUDlBchHSPxb47QsD4rzg-removebg-preview (1).png">
+							<div class="text">
+								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
+								<img src="images/Pd1.png" alt="PD1 Badge">
+								<span>PD1</span>
+							</div>
 						</div>
 					</div>
 				</div>
