--- a/index.html
+++ b/index.html
@@ -464,52 +464,51 @@
 					</div>
 				</div>
 		
-				<!-- Certification Achievements -->
-				<div class="row d-md-flex align-items-center">
-					<!-- Certified Admin -->
-					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-						<div class="block-18 fancy-bond" style="background-image: none;">
-							<div class="text">
-								<!-- Replace "URL_TO_CERTIFIED_ADMIN_IMAGE" with the actual URL of the Certified Admin badge image -->
-								<img src="images/ADM.png" alt="Certified Admin Badge">
-								<span>Certified Admin</span>
-							</div>
-						</div>
-					</div>
-		
-					<!-- PD1 -->
-					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-						<div class="block-18 fancy-bond" style="background-image: none;">
-							<div class="text">
-								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
-								<img src="images/Pd1.png" alt="PD1 Badge">
-								<span>PD1</span>
-							</div>
+<!-- Certification Achievements -->
+<section class="certification-achievements">
+    <div class="row d-md-flex align-items-center">
+        <!-- Certified Admin -->
+        <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18 fancy-bond" style="background-image: none;">
+                <div class="text">
+                    <img src="images/ADM.png" alt="Certified Admin Badge" class="certification-image">
+                    <span>Certified Admin</span>
+                </div>
+            </div>
+        </div>
 
-					<!-- Certified AI Assocaite -->
-					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-						<div class="block-18 fancy-bond" style="background-image: none;">
-							<div class="text">
-								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
-								<img src="images/1_m-uw7vVWdxUN5bVeH_nqvw.png">
-								<span>PD1</span>
-							</div>
-							
-					<!-- Certified AI Specalist -->
-					<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-						<div class="images/1_dCUDlBchHSPxb47QsD4rzg-removebg-preview (1).png">
-							<div class="text">
-								<!-- Replace "URL_TO_PD1_IMAGE" with the actual URL of the PD1 badge image -->
-								<img src="images/Pd1.png" alt="PD1 Badge">
-								<span>PD1</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-	
+        <!-- PD1 -->
+        <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18 fancy-bond" style="background-image: none;">
+                <div class="text">
+                    <img src="images/Pd1.png" alt="PD1 Badge" class="certification-image">
+                    <span>PD1</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Certified AI Associate -->
+        <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18 fancy-bond" style="background-image: none;">
+                <div class="text">
+                    <img src="images/1_m-uw7vVWdxUN5bVeH_nqvw.png" alt="Certified AI Associate Badge" class="certification-image">
+                    <span>Certified AI Associate</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Certified AI Specialist -->
+        <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18 fancy-bond" style="background-image: none;">
+                <div class="text">
+                    <img src="images/1_dCUDlBchHSPxb47QsD4rzg-removebg-preview (1).png" alt="Certified AI Specialist Badge" class="certification-image">
+                    <span>Certified AI Specialist</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
