--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
 				</div>
 		
 <!-- Certification Achievements -->
+<!-- Certification Achievements -->
 <section class="certification-achievements">
     <div class="row d-md-flex align-items-center">
         <!-- Certified Admin -->
@@ -508,7 +509,6 @@
         </div>
     </div>
 </section>
-
 
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
